--- a/package.json
+++ b/package.json
@@ -32,15 +32,25 @@
     "mysql2": "^2.3.0"
   },
   "devDependencies": {
+    "@commitlint/cli": "^17.0.1",
+    "@commitlint/config-conventional": "^17.0.0",
     "chai": "^4.3.4",
+    "commitizen": "^4.2.4",
+    "cz-conventional-changelog": "^3.3.0",
     "eslint-config-trybe-backend": "^1.0.3",
+    "frisby": "^2.1.2",
+    "husky": "^8.0.1",
+    "jest": "^26.4.1",
     "mocha": "^8.4.0",
     "mysql-import": "^5.0.21",
     "nodemon": "^2.0.4",
     "nyc": "^15.1.0",
     "sinon": "^11.1.1",
-    "frisby": "^2.1.2",
-    "jest": "^26.4.1",
     "supertest": "^6.2.2"
+  },
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/cz-conventional-changelog"
+    }
   }
 }
